# prg2-pr_milestone4

./: README.md
CNeuralNet/: CMakeLists.txt  main.cpp
CNeuralNet/src/: NeuralNet.cpp  NeuralNet.h  SigmoidFunctions.cpp  SigmoidFunctions.h
CNeuralNet/src/LinearAlgebra/: Factory.cpp  Factory.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
CNeuralNet/test/: TestObject.cpp  TestObject.h  main.cpp  main.h
Milestone4_GUI/: Milestone4_GUI.pro  mainwindow (DESKTOP-IV81F56's conflicted copy 2019-01-29).cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-Milestone4_GUI-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-Milestone4_GUI-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
